update Java version to 11